update info, fix overlapping

--- a/src/style.css
+++ b/src/style.css
@@ -223,7 +223,7 @@ p{
     text-decoration: none;
     border-radius: 0px;
     text-transform: uppercase;
-    margin-top: 27px;
+    margin-top: 35px;
     box-shadow: 1px 1px 16px rgba(0,0,0,0.4);
     float:left;
     background: rgb(33,33,33);
